[package]
name = "rustless_os"
version = "0.1.0"
edition = "2018"
# To disable eh_personailty lang, abort panic
# Setting panic strategery to abort for the dev profile.
# dev profile is used in cargo build
[profile.dev]
panic = "abort"
# Setting panic strategry to abort for the release profile,
# release profile is used in cargo build --release
[profile.release]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# For creating a bootable disk image
[dependencies]
bootloader = "0.9.23"
# To prevent compiler from optimizing writes away
volatile = "0.2.6"
# To get synchronized interior mutability, we can use mutex.
# spinlock tries to use lock again in a loop, burning cpu time until mutex is free.
spin = "0.5.2"
# One-Time initialization of statics with non-const functions issue
# Using lazy_static! we difine a lazily initialized static instead of computing its value at compile time, lazy initializes itself when accessed for the first time, to initialize at runtime. 
[dependencies.lazy_static] 
version = "1.0" 
features = ["spin_no_std"]
